--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
+		"svelte-range-slider-pips": "^4.0.7",
 		"tailwindcss": "^4.0.0",
 		"unplugin-icons": "^22.1.0",
 		"vite": "^7.0.4"
