Make warbond selection more intuitive, use same checkmark everywhere.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
+		"@iconify-json/fluent": "^1.2.27",
 		"@iconify-json/ion": "^1.2.4",
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.22.0",
